# OpenNodeRelay

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  process_manager.rs  protocol.rs  shell.rs  signaling.rs  webrtc.rs
docs/: DEPLOY_SIGNALING.md
mobile/: App.tsx  app.json  index.js  package-lock.json  package.json
mobile/android/: build.gradle  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/opennoderelay/app/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/OpenNodeRelay/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/ios/OpenNodeRelay.xcodeproj/: project.pbxproj
mobile/ios/OpenNodeRelay.xcodeproj/xcshareddata/xcschemes/: OpenNodeRelay.xcscheme
mobile/ios/OpenNodeRelay.xcworkspace/: contents.xcworkspacedata
mobile/src/components/: ConnectionBar.js  StateBadge.js
mobile/src/context/: DaemonContext.js
mobile/src/screens/: DashboardScreen.js  LogScreen.js  PairScreen.js  SettingsScreen.js  TerminalScreen.js
mobile/src/services/: connection.js
mobile/src/utils/: storage.js  theme.js  uuid.js
signaling/: package-lock.json  package.json  wrangler.toml
signaling/src/: index.js
