[package]
name = "opennoderelay-daemon"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
datachannel = { version = "0.16", default-features = false, features = ["vendored", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
base64 = "0.22"
portable-pty = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
